--- a/spring-batch-admin-sample/pom.xml
+++ b/spring-batch-admin-sample/pom.xml
@@ -13,6 +13,11 @@
 	<name>Web Sample</name>
 	<dependencies>
 		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.3-1101-jdbc41</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
