--- a/spring-batch-admin-sample/src/main/resources/batch-default.properties
+++ b/spring-batch-admin-sample/src/main/resources/batch-default.properties
@@ -1,6 +1,5 @@
-# Default placeholders for database platform independent features 
-batch.remote.base.url=http://localhost:8080/
+# Default placeholders for database platform independent features
+batch.remote.base.url=http://localhost:8080/spring-batch-admin-sample
 
 # Non-platform dependent settings that you might like to change
-# batch.job.configuration.file.dir=target/config
-# batch.files.upload-dir=/sba/input
+batch.job.configuration.file.dir=/tmp
